--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -1,107 +1,135 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Log In</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #222; /* Цвет фона */
-            color: #fff; /* Цвет текста */
-        }
+      :root {
+        --background-color: #222;
+        --text-color: #ffffff;
+        --user-name-color: rgb(150, 150, 150);
+        --message-back-color: #444;
+        --button-back-color: #4c81af;
+        --button-font-color: #ffffff;
+        --input-back-color: #444;
+        --input-font-color: #ffffff;
+        --areas-back-color: #333;
+        --border-back-color: #555;
+      }
 
-        form {
-            text-align: left;
-            width: 300px;
-            padding: 20px;
-            border: 1px solid #555; /* Цвет границ формы */
-            border-radius: 5px;
-            box-sizing: border-box;
-            background-color: #333; /* Цвет фона формы */
-            border-radius: 10px;        
-        }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: var(--background-color);
+        color: var(--text-color);
+      }
 
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
+      form {
+        text-align: left;
+        width: 300px;
+        padding: 20px;
+        border: 1px solid var(--border-back-color);
+        border-radius: 5px;
+        box-sizing: border-box;
+        background-color: var(--areas-back-color);
+        border-radius: 10px;
+      }
 
-        input {
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 8px;
-            box-sizing: border-box;
-            background-color: #444; /* Цвет фона поля ввода */
-            color: #fff; /* Цвет текста в полях ввода */
-            border: 1px solid #555; /* Цвет границ поля ввода */
-            border-radius: 10px;
-        }
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
 
-        button {
-            background-color: #4c81af;
-            color: #fff;
-            border: none;
-            padding: 10px 0; /* Изменим заполнение кнопки */
-            width: 100%; /* Растянем кнопку на всю доступную ширину */
-            cursor: pointer;
-            border-radius: 10px;
-        }
+      input {
+        width: 100%;
+        margin-bottom: 10px;
+        padding: 8px;
+        box-sizing: border-box;
+        background-color: var(--message-back-color);
+        color: var(--text-color);
+        border: 1px solid var(--border-back-color);
+        border-radius: 10px;
+      }
 
-        p{
-            text-align:center;
-            color: rgb(223, 117, 117);
-        }
-        a {
-            text-decoration: none;
-            color: #4c81af; /* Adjust the color to your preference */
-            display: block;
-            text-align: center; /* Center the text */
-            margin-top: 10px; /* Add some space between the button and the link */
-        }
-        
+      button {
+        background-color: var(--button-back-color);
+        color: var(--text-color);
+        border: none;
+        padding: 10px 0;
+        width: 100%;
+        cursor: pointer;
+        border-radius: 10px;
+      }
+
+      p {
+        text-align: center;
+        color: rgb(223, 117, 117);
+      }
+      a {
+        text-decoration: none;
+        color: var(--button-back-color);
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+      }
     </style>
-</head>
-<body>
-<form id="loginForm" onsubmit="submitForm(event)">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" maxlength="70" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" maxlength="70" required >
-    <br>
-    <button type="submit">Log In </button>
-    <a href="/sign-up">Dont have an account yet? Sign up!</a> 
-    <p id="logIn-error"></p>
-</form>
+  </head>
+  <body>
+    <form id="loginForm" onsubmit="submitForm(event)">
+      <label for="username">Username:</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        maxlength="70"
+        required
+      />
+      <br />
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        maxlength="70"
+        required
+      />
+      <br />
+      <button type="submit">Log In</button>
+      <a href="/sign-up">Dont have an account yet? Sign up!</a>
+      <p id="logIn-error"></p>
+    </form>
 
-<script>
-    function submitForm(event) {
-        event.preventDefault(); // Предотвращаем отправку формы по умолчанию
+    <script>
+      function submitForm(event) {
+        event.preventDefault();
 
-        let formData = new FormData(document.getElementById('loginForm')); // Получаем данные формы
+        let formData = new FormData(document.getElementById("loginForm"));
 
-        fetch('/auth', {
-            method: 'POST',
-            body: formData
+        fetch("/auth", {
+          method: "POST",
+          body: formData,
         })
-        .then(response => {
+          .then((response) => {
             if (response.ok) {
-                // Если ответ успешен, перенаправляем пользователя на другую страницу
-                window.location.href = '/chat'; // Замените на адрес нужной вам страницы
+              window.location.href = "/chat";
             } else {
-                // Если ответ неуспешен, обрабатываем ошибку
-                throw new Error('Login failed');
+              throw new Error("Login failed");
             }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            document.getElementById('logIn-error').textContent = 'Incorrect username or password';
-        });
-    }
-</script>
-</body>
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+            document.getElementById("logIn-error").textContent =
+              "Incorrect username or password";
+          });
+      }
+    </script>
+  </body>
 </html>
