--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -1,139 +1,173 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Sign Up</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #222; /* Цвет фона */
-            color: #fff; /* Цвет текста */
-        }
+      :root {
+        --background-color: #222;
+        --text-color: #ffffff;
+        --user-name-color: rgb(150, 150, 150);
+        --message-back-color: #444;
+        --button-back-color: #4c81af;
+        --button-font-color: #ffffff;
+        --input-back-color: #444;
+        --input-font-color: #ffffff;
+        --areas-back-color: #333;
+        --border-back-color: #555;
+      }
 
-        form {
-            text-align: left;
-            width: 300px;
-            padding: 20px;
-            border: 1px solid #555; /* Цвет границ формы */
-            border-radius: 5px;
-            box-sizing: border-box;
-            background-color: #333; /* Цвет фона формы */
-            border-radius: 10px;        
-        }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: var(--background-color);
+        color: var(--text-color);
+      }
 
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
+      form {
+        text-align: left;
+        width: 300px;
+        padding: 20px;
+        border: 1px solid var(--border-back-color);
+        border-radius: 5px;
+        box-sizing: border-box;
+        background-color: var(--areas-back-color);
+        border-radius: 10px;
+      }
 
-        input {
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 8px;
-            box-sizing: border-box;
-            background-color: #444; /* Цвет фона поля ввода */
-            color: #fff; /* Цвет текста в полях ввода */
-            border: 1px solid #555; /* Цвет границ поля ввода */
-            border-radius: 10px;
-        }
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
 
-        button {
-            background-color: #4c81af;
-            color: #fff;
-            border: none;
-            padding: 10px 0; /* Изменим заполнение кнопки */
-            width: 100%; /* Растянем кнопку на всю доступную ширину */
-            cursor: pointer;
-            border-radius: 10px;
-        }
+      input {
+        width: 100%;
+        margin-bottom: 10px;
+        padding: 8px;
+        box-sizing: border-box;
+        background-color: var(--message-back-color);
+        color: var(--text-color);
+        border: 1px solid var(--border-back-color);
+        border-radius: 10px;
+      }
 
-        a {
-            text-decoration: none;
-            color: #4c81af; /* Adjust the color to your preference */
-            display: block;
-            text-align: center; /* Center the text */
-            margin-top: 10px; /* Add some space between the button and the link */
-        }
+      button {
+        background-color: var(--button-back-color);
+        color: var(--text-color);
+        border: none;
+        padding: 10px 0;
+        width: 100%;
+        cursor: pointer;
+        border-radius: 10px;
+      }
 
-        p{
-            text-align:center;
-            color: rgb(223, 117, 117);
-        }
-        
+      a {
+        text-decoration: none;
+        color: var(--button-back-color);
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+      }
+
+      p {
+        text-align: center;
+        color: rgb(223, 117, 117);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <form id="signup-form" onsubmit="submitForm(event)">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" maxlength="70" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" maxlength="70" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" maxlength="70" required>
-        <button type="submit">Sign Up</button>
-        <p id="error-info" class="error-message"></p>
-        <a href="/auth">Already have an account? Log in!</a> 
+      <label for="username">Username:</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        maxlength="70"
+        required
+      />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" maxlength="70" required />
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        maxlength="70"
+        required
+      />
+      <button type="submit">Sign Up</button>
+      <p id="error-info" class="error-message"></p>
+      <a href="/auth">Already have an account? Log in!</a>
     </form>
 
     <script>
-
-    function validatePassword() {
-        const password = document.getElementById('password').value;
-        const passwordRequirement = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}$/;
+      function validatePassword() {
+        const password = document.getElementById("password").value;
+        const passwordRequirement =
+          /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}$/;
         if (!passwordRequirement.test(password)) {
-            document.getElementById('error-info').textContent = 'Password must contain at least 8 characters, one uppercase letter, one lowercase letter, one number and one special character';
-            return false;
+          document.getElementById("error-info").textContent =
+            "Password must contain at least 8 characters, one uppercase letter, one lowercase letter, one number and one special character";
+          return false;
         }
         return true;
-    }
+      }
 
+      document
+        .getElementById("password")
+        .addEventListener("input", function (event) {
+          const inputValue = event.target.value;
+          const allowedCharacters = /^[a-zA-Z0-9!@#$%^&*()_+{}\[\]:;<>,.?~-]*$/;
 
-    document.getElementById('password').addEventListener('input', function(event) {
-        const inputValue = event.target.value;
-        const allowedCharacters = /^[a-zA-Z0-9!@#$%^&*()_+{}\[\]:;<>,.?~-]*$/; // Регулярное выражение для разрешённых символов
+          if (!allowedCharacters.test(inputValue)) {
+            event.target.value = inputValue.slice(0, -1);
+            document.getElementById("error-info").textContent =
+              "Недопустимый символ. Разрешены только латинские буквы, цифры и определенные спецсимволы";
+          } else {
+            document.getElementById("error-info").textContent = "";
+          }
+        });
 
-        if (!allowedCharacters.test(inputValue)) {
-            // Если вводится неразрешённый символ, очистить поле ввода и вывести сообщение об ошибке
-            event.target.value = inputValue.slice(0, -1); // Удалить последний символ
-            document.getElementById('error-info').textContent = 'Недопустимый символ. Разрешены только латинские буквы, цифры и определенные спецсимволы';
-        } else {
-            document.getElementById('error-info').textContent = ''; // Очистить сообщение об ошибке
-        }
-    });
-
-        function submitForm(event) {
-            event.preventDefault(); // Prevent the default form submission
-            if (validatePassword()) {
-            let formData = new FormData(document.getElementById('signup-form')); // Get form data
-            fetch('/sign-up', {
-                method: 'POST',
-                body: formData
+      function submitForm(event) {
+        event.preventDefault();
+        if (validatePassword()) {
+          let formData = new FormData(document.getElementById("signup-form"));
+          fetch("/sign-up", {
+            method: "POST",
+            body: formData,
+          })
+            .then((response) => {
+              if (response.ok) {
+                window.location.href = "/auth";
+              } else {
+                response
+                  .text()
+                  .then((errorMessage) => {
+                    document.getElementById("error-info").textContent =
+                      "it's busy here :D";
+                  })
+                  .catch((error) => {
+                    console.error("Error fetching error message:", error);
+                    document.getElementById("error-info").textContent =
+                      "Unknown error occurred";
+                  });
+              }
             })
-            .then(response => {
-                if (response.ok) {
-                    // Handle successful response (e.g., redirect to a new page)
-                    window.location.href = '/auth'; // Replace with the actual success page
-                } else {
-                    // Handle error response and extract error message if available
-                    response.text().then(errorMessage => {
-                        document.getElementById('error-info').textContent = "it's busy here :D";
-                    }).catch(error => {
-                        console.error('Error fetching error message:', error);
-                        document.getElementById('error-info').textContent = 'Unknown error occurred';
-                    });
-                }
-            })
-            .catch(error => {
-                // Handle network errors
-                console.error('Error:', error);
-                document.getElementById('error-info').textContent = 'An error occurred. Please try again later.'; // Show a generic error message
+            .catch((error) => {
+              console.error("Error:", error);
+              document.getElementById("error-info").textContent =
+                "An error occurred. Please try again later.";
             });
         }
-    }
+      }
     </script>
-</body>
+  </body>
 </html>
