--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,7 +62,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 50%; /* Changed max-width to width */
+        width: 50%;
         margin: auto;
         margin-top: 10px;
         margin-bottom: 10px;
@@ -273,10 +273,7 @@
             connectWebSocket(userInfo.email);
           })
           .catch((error) => {
-            console.error(
-              "Ошибка при получении информации о пользователе:",
-              error
-            );
+            console.error("error", error);
           });
       }
 
@@ -308,7 +305,7 @@
             });
           })
           .catch((error) => {
-            console.error("Ошибка при получении пользователей:", error);
+            console.error("error", error);
           });
       }
 
