--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -121,21 +121,6 @@
         return true;
       }
 
-      document
-        .getElementById("password")
-        .addEventListener("input", function (event) {
-          const inputValue = event.target.value;
-          const allowedCharacters = /^[a-zA-Z0-9!@#$%^&*()_+{}\[\]:;<>,.?~-]*$/;
-
-          if (!allowedCharacters.test(inputValue)) {
-            event.target.value = inputValue.slice(0, -1);
-            document.getElementById("error-info").textContent =
-              "Недопустимый символ. Разрешены только латинские буквы, цифры и определенные спецсимволы";
-          } else {
-            document.getElementById("error-info").textContent = "";
-          }
-        });
-
       function submitForm(event) {
         event.preventDefault();
         if (validatePassword()) {
@@ -152,7 +137,7 @@
                   .text()
                   .then((errorMessage) => {
                     document.getElementById("error-info").textContent =
-                      "it's busy here :D";
+                      "Email is already taken!";
                   })
                   .catch((error) => {
                     console.error("Error fetching error message:", error);
